# numc

./: .gitignore  CMakeLists.txt
doc/: CMakeLists.txt  doxyfile.in
numc/: numc.cmake
numc/core/: array.h  array_op.h  core.h  num_traits.h  shape.h
numc/core/functors/: binary_functors.h  functors.h
numc/core/ops/: cwise_binary_op.h  ops.h
numc/core/utils/: constants.h  disable_stupid_warnings.h  forward_declarations.h  meta.h  xpr_helper.h
numc/core/utils/macros/: macros.h  macros_aligned.h  macros_arch.h  macros_compiler.h  macros_cuda.h  macros_cxx.h  macros_os.h  macros_utils.h  macros_vectorize.h
test/: CMakeLists.txt
test/temp_test/: CMakeLists.txt  temp_test.cc  test.h
